[tool.poetry]
name = "bank-operations-analyzer"
version = "0.1.0"
description = ""
authors = ["Said Magomedov <saidmagomedov037@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
